--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 4000",
     "build": "next build",
-    "start": "set PORT=4000",
+    "start": "next start -p 4080",
+    "start-test-server": "json-server --watch src/pages/api/data.json -p 3000",
     "lint": "next lint"
   },
   "dependencies": {
